[build-system]
requires = ["setuptools>=65.4.1", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"


[project]
name = "iqm-cortex-cli"
dynamic = ["version"]
description = "CLI for managing user authentication when using IQM quantum computers"
authors = [{name = "IQM Finland Oy", email = "developers@meetiqm.com"}]
readme = "README.rst"
license = {file = "LICENSE.rst"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9, <3.12"
dependencies = [
    "click >= 7.1.2, < 8.1.4",  # upper limit until https://github.com/pallets/click/issues/2558 is fixed
    "jsonschema >= 4.6.0",
    "psutil >= 5.9.2",
    "pydantic >= 1.10.2, < 2.0",
    "python-daemon >= 2.3.0",
    "requests >= 2.26.0"
]

[project.urls]
homepage = "https://github.com/iqm-finland/cortex-cli"
documentation = "https://iqm-finland.github.io/cortex-cli"
repository = "https://github.com/iqm-finland/cortex-cli.git"
changelog = "https://github.com/iqm-finland/cortex-cli/blob/main/CHANGELOG.rst"

[project.optional-dependencies]
# Add here additional requirements for extra features, to install with:
# `pip install iqm-cortex-cli[testing,docs,dev]`
dev = [
    "tox == 3.25.1"
]
testing = [
    "black == 22.10.0",
    "isort == 5.10.1",
    "mypy == 0.991",
    "pytest == 7.1.2",
    "pytest-cov == 3.0.0",
    "pytest-isort == 3.0.0",
    "pytest-mypy == 0.9.1",
    "pytest-pylint == 0.18.0",
    "mockito == 1.2.2",
    "types-requests == 2.28.9"
]
docs = [
    "sphinx == 4.5.0",
    "sphinx-book-theme == 0.3.3",
    "sphinx-multiversion-contrib == 0.2.12"
]
cicd = [
    "twine ~= 4.0"
]

[project.scripts]
cortex = "iqm.cortex_cli.cortex_cli:cortex_cli"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools_scm]
version_scheme = "no-guess-dev"


[tool.pytest.ini_options]
norecursedirs = [
    ".github",
    ".mypy_cache",
    ".tox",
    "build",
    "docs",
    "venv"
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:xarray",
    "ignore::DeprecationWarning:distutils",
    "ignore::FutureWarning:numpy"
]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311"]


[tool.coverage.run]
branch = true
source = ["cortex_cli"]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    'if self\.debug',

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]


[tool.isort]
# make isort and black compatible
profile = "black"
line_length = 120
balanced_wrapping = true
force_sort_within_sections = true
reverse_relative = true
group_by_package = true
known_first_party = ["iqm"]


[tool.mypy]
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "click",
    "daemon",
    "mockito",
    "psutil"
]
ignore_missing_imports = true


[tool.pylint.main]
disable = [
    "abstract-method",
    "duplicate-code",
    "fixme",
    "invalid-name",
    "protected-access",
    "too-few-public-methods",
]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.similarities]
ignore-imports = true

[tool.pylint.string]
check-quote-consistency = true
