# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = iqm-cortex_cli
description = CLI for executing quantum circuits
author = IQM Finland Oy
author_email = developers@meetiqm.com
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/iqm-finland/cortex-cli
project_urls =
    Documentation = https://iqm-finland.github.io/iqm-cortex-cli
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    click >= 7.1.2
    python-daemon >= 2.3.0
    psutil >= 5.9.2
    jsonschema >= 4.6.0
    requests >= 2.26.0
    pydantic >= 1.8.2, < 2.0
    pydantic >= 1.10.2

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = ~= 3.9

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install iqm-cortex-cli[testing,docs,dev]`
circuit =
    cirq-iqm >= 11.0, < 12.0
    iqm-client >= 11.0, < 12.0
dev =
    tox == 3.25.1
testing =
    black == 22.10.0
    isort == 5.10.1
    mypy == 0.991
    pytest == 7.1.2
    pytest-cov == 3.0.0
    pytest-isort == 3.0.0
    pytest-mypy == 0.9.1
    pytest-pylint == 0.18.0
    mockito == 1.2.2
    types-requests == 2.28.9
docs =
    sphinx == 4.5.0
    sphinx-multiversion-contrib == 0.2.12
    sphinx-book-theme == 0.3.3
cicd =
    twine ~= 4.0

[options.entry_points]
# Add here console scripts like:
console_scripts =
    cortex = cortex_cli.cortex_cli:cortex_cli
